[package]
name = "surt"
version = "0.1.0"
authors = ["Tim Z. <zhenghanecho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" }
pixel-canvas = "0.2.0"
